@@ -16,8 +16,8 @@
 
 package org.springframework.boot.actuate.autoconfigure.endpoint.jmx;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import java.util.function.Function;
 
@@ -94,7 +94,7 @@ class JmxEndpointAutoConfigurationTests {
 	@Test
 	void jmxEndpointWithContextHierarchyGeneratesUniqueNamesForEachEndpoint() throws Exception {
 		given(this.mBeanServer.queryNames(any(), any()))
-				.willReturn(new HashSet<>(Arrays.asList(new ObjectName("test:test=test"))));
+				.willReturn(new HashSet<>(List.of(new ObjectName("test:test=test"))));
 		ArgumentCaptor<ObjectName> objectName = ArgumentCaptor.forClass(ObjectName.class);
 		ApplicationContextRunner jmxEnabledContextRunner = this.contextRunner
 				.withPropertyValues("spring.jmx.enabled=true", "management.endpoints.jmx.exposure.include=test");
@@ -105,10 +105,10 @@ class JmxEndpointAutoConfigurationTests {
 		then(this.mBeanServer).should(times(3)).registerMBean(any(Object.class), objectName.capture());
 		Set<ObjectName> uniqueValues = new HashSet<>(objectName.getAllValues());
 		assertThat(uniqueValues).hasSize(3);
-		assertThat(uniqueValues).allMatch((name) -> name.getDomain().equals("org.springframework.boot"));
-		assertThat(uniqueValues).allMatch((name) -> name.getKeyProperty("type").equals("Endpoint"));
-		assertThat(uniqueValues).allMatch((name) -> name.getKeyProperty("name").equals("Test"));
-		assertThat(uniqueValues).allMatch((name) -> name.getKeyProperty("context") != null);
+		assertThat(uniqueValues).allMatch((name) -> name.getDomain().equals("org.springframework.boot"))
+				.allMatch((name) -> name.getKeyProperty("type").equals("Endpoint"))
+				.allMatch((name) -> name.getKeyProperty("name").equals("Test"))
+				.allMatch((name) -> name.getKeyProperty("context") != null);
 	}
 
 	private Function<ApplicationContextRunner, ApplicationContextRunner> mockMBeanServer() {
